fix: 🐛 Changed overflow from unset to visible

--- a/src/styles/chat/_draw-initiative-message.scss
+++ b/src/styles/chat/_draw-initiative-message.scss
@@ -6,7 +6,7 @@
 /* ------------------------------------------ */
 
 .chat-message .message-content:has(.initiative-draw) {
-  overflow: unset;
+  overflow: visible;
 }
 
 .chat-message .initiative-draw {
